--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.5.1"
+    "vue-property-decorator": "^8.5.1",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
