--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
